--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <head>
 <title>automobile</title>
 <meta name="description" content="formulaire de contact">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
